Fixed text alignment with Contact Me button

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
   background-color: #5538C8;
   color: #fff;
   border-radius: 50px;
-  padding: 15px 40px 10.5px 40px;
+  padding: 13px 40px;
   font-size: 20px;
   border: none;
   transition: .3s;
